[parcyl:requirements]
# If pinning nicfit.py be sure to also pin nicfit[cookiecutter] below
install:
    eyeD3>=0.9a0
    nicfit.py
    SQLAlchemy
    inotify
    alembic
    countrycode
    pyfiglet
    sqlalchemy-utils

extra_postgres:
    psycopg2-binary

extra_web:
    pyramid
    pyramid_chameleon
    pyramid-layout
    pyramid_tm
    transaction
    zope.sqlalchemy
    waitress
    pyramid-debugtoolbar
    gevent
    gunicorn

test:
    pytest
    pytest-cov
    pytest-runner
    pytest-postgres
    faker
    factory-boy

#git+https://github.com/nicfit/gitchangelog.git@nicfit.py
dev:
    nicfit.py[cookiecutter]
    Sphinx
    sphinx_rtd_theme
    babel
    check-manifest
    flake8
    ipdb
    pip-tools
    tox
    twine
    wheel
    pyaml>=4.2b1
    pss

[wheel]
universal = 0

[flake8]
max-line-length = 100
statistics = 1
ignore = D400,E121,E124,E126,E127,E128,E131,E266,N802,W503,W504
builtins = _

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*

[tool:pytest]
addopts = --verbose

[metadata]
license_file = LICENSE
