[parcyl]
version = 0.3b13
release_name =
years = 2013-2019

project_name: MishMash
author = Travis Shirk
author_email = travis@pobox.com
url = https://github.com/nicfit/MishMash
description = Music database and web interface.
long_description =
license = GNU GPL v3.0
github_url = https://github.com/nicfit/mishmash
classifiers: Intended Audience :: End Users/Desktop
             Operating System :: POSIX
             Natural Language :: English
             License :: OSI Approved :: GNU General Public License v3 (GPLv3)
             Programming Language :: Python
             Programming Language :: Python :: 3.6
             Programming Language :: Python :: 3.7
keywords: music database sqlalchemy pyramid mp3

[parcyl:requirements]
# If pinning nicfit.py be sure to also pin nicfit[cookiecutter] below
install:
    eyeD3>=0.9a0
    nicfit.py
    SQLAlchemy
    inotify
    alembic
    countrycode
    pyfiglet
    sqlalchemy-utils

extra_postgres:
    psycopg2-binary

extra_web:
    pyramid
    pyramid_chameleon
    pyramid-layout
    pyramid_tm
    transaction
    zope.sqlalchemy
    waitress
    pyramid-debugtoolbar
    gevent
    gunicorn

test:
    tox
    pytest
    pytest-cov
    pytest-runner
    pytest-postgres
    faker
    factory-boy

#git+https://github.com/nicfit/gitchangelog.git@nicfit.py
dev:
    parcyl>=1.0a3[requirements]
    nicfit.py[cookiecutter]
    Sphinx
    sphinx_rtd_theme
    babel
    ipdb
    twine
    wheel
    pyaml>=4.2b1
    pss

[wheel]
universal = 0

[flake8]
max-line-length = 100
statistics = 1
ignore = D400,E121,E124,E126,E127,E128,E131,E266,N802,W503,W504
builtins = _

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*

[tool:pytest]
addopts = --verbose

[metadata]
license_file = LICENSE
